# boxtime

./: .gitignore  README.md  pyproject.toml  sketch.ipynb
boxtime/: sim.py
boxtime/auth/: scope.py  service.py
boxtime/cli/: __init__.py  art.py  people.py  task.py
boxtime/cli/css/: log_screen.tcss  main.tcss  task_screen.tcss
boxtime/cli/main_screen/: box_time.py  people_view.py  task_view.py
boxtime/cli/screens/: main.py
boxtime/cli/screens/input/: log.py  people.py  task.py
boxtime/client/: calendar.py  colors.py
boxtime/db/: schema.py
boxtime/utils/: logger.py
boxtime/vis/: __init__.py  aggregate.py  colors.py  heatmap.py  radar.py  utils.py  violin.py
