[tool.poetry]
name = "boxtime"
version = "0.1.0"
description = "Analyze time boxed events on your calendar."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.111.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
